app/userland/webterm/js/lib/webterm.peg
// Webterm Input Grammar (PEG.js)
// ==============================

Expression
  = Term+
  
Term
  = term:Switch _? { return {type: 'param', key: term.key, value: term.value} }
  / term:String _? { return {type: 'token', value: term} }

Switch "switch"
  = '-'+ key:String _+ value:NonSwitch { return {key, value} }
  / '-'+ key:String { return {key, value: undefined} }

NonSwitch "non-switch"
  = !'-' value:String { return value }

String "string"
  = Char+ { return text() }
  / '"' value:CharOr_OrSingleQuote* '"' { return value.join('') }
  / '\'' value:CharOr_OrDoubleQuote* '\'' { return value.join('') }

CharOr_OrDoubleQuote "character, whitespace, or double quote"
  = CharOr_
  / '"'

CharOr_OrSingleQuote "character, whitespace, or single quote"
  = CharOr_
  / '\''

CharOr_ "character or whitespace"
  = Char
  / _

Char "character"
  = [^ "'\f\n\r\t\v\u00a0\u1680\u2000-\u200a\u2028\u2029\u202f\u205f\u3000\ufeff]i

_ "whitespace"
  = [ \t]+
